update UI structure
- fix fonts
- split dashboard
- added header (only shutdown works)
- added sidebar (visually)
